c1/HandlePartner
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:512:12: error: expected expression
*( _OWORD *)&my_partner[240] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:512:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[240] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:513:12: error: expected expression
*( _OWORD *)&my_partner[224] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:513:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[224] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:514:12: error: expected expression
*( _OWORD *)&my_partner[208] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:514:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[208] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:515:12: error: expected expression
*( _OWORD *)&my_partner[192] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:515:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[192] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:516:12: error: expected expression
*( _OWORD *)&my_partner[176] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:516:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[176] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:517:12: error: expected expression
*( _OWORD *)&my_partner[160] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:517:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[160] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:518:12: error: expected expression
*( _OWORD *)&my_partner[144] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:518:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[144] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:519:12: error: expected expression
*( _OWORD *)&my_partner[128] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:519:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[128] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:520:12: error: expected expression
*( _OWORD *)&my_partner[112] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:520:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[112] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:521:12: error: expected expression
*( _OWORD *)&my_partner[96] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:521:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[96] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:522:12: error: expected expression
*( _OWORD *)&my_partner[80] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:522:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[80] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:523:12: error: expected expression
*( _OWORD *)&my_partner[64] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:523:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[64] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:524:12: error: expected expression
*( _OWORD *)&my_partner[48] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:524:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[48] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:525:12: error: expected expression
*( _OWORD *)&my_partner[32] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:525:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[32] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:526:12: error: expected expression
*( _OWORD *)&my_partner[16] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:526:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[16] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:527:12: error: expected expression
*( _OWORD *)my_partner = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/partner.c:527:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)my_partner = 0LL; 
   ^
32 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePartner/src/obj/partner.o] Error 1
